--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 07 21:50:48 EDT 2017
-sdk.dir=C\:\\Users\\owner\\AppData\\Local\\Android\\Sdk
+#Fri Sep 08 15:20:05 EDT 2017
+sdk.dir=C\:\\dev\\AndroidLocal\\Android\\Sdk
